service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cool-server-svc
  labels:
    run: cool-server-svc
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
  selector:
    app: my-cool-server
